syntax = "proto3";

package ova.rule.api;

import "google/protobuf/empty.proto";

option go_package = "github.com/ozonva/ova-rule-api/pkg/ova-rule-api;ova_rule_api";

service API {
  rpc CreateRule(CreateRuleRequest) returns (google.protobuf.Empty);
  rpc DescribeRule(DescribeRuleRequest) returns (DescribeRuleResponse);
  rpc ListRules(ListRulesRequest) returns (ListRulesResponse);
  rpc RemoveRule(RemoveRuleRequest) returns (google.protobuf.Empty);
  rpc MultiCreateRule(MultiCreateRuleRequest) returns (google.protobuf.Empty);
  rpc UpdateRule(UpdateRuleRequest) returns (google.protobuf.Empty);
  rpc Status(google.protobuf.Empty) returns (StatusResponse);
}

message Rule {
  uint64 id = 1;
  string name = 2;
  uint64 user_id = 3;
}

message CreateRuleRequest {
  uint64 id = 1;
  string name = 2;
  uint64 user_id = 3;
}

message DescribeRuleRequest {
  uint64 id = 1;
}

message DescribeRuleResponse {
  Rule result = 1;
}

message ListRulesRequest {
  uint64 limit = 1;
  uint64 offset = 2;
}

message ListRulesResponse {
  repeated Rule result = 1;
}

message RemoveRuleRequest {
  uint64 id = 1;
}

message MultiCreateRuleRequest {
  repeated Rule rules = 1;
}

message UpdateRuleRequest {
  Rule rule = 1;
}

message StatusResponse {
  string status = 1;
}
